--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "external/libuv"]
 	path = external/libuv
 	url = https://github.com/joyent/libuv.git
+[submodule "external/libatomic_ops"]
+	path = external/libatomic_ops
+	url = https://github.com/ivmai/libatomic_ops.git
+[submodule "external/bdwgc"]
+	path = external/bdwgc
+	url = https://github.com/ivmai/bdwgc.git
