add an external dependency: lua

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "external/bdwgc"]
 	path = external/bdwgc
 	url = https://github.com/ivmai/bdwgc.git
+[submodule "external/lua"]
+	path = external/lua
+	url = https://github.com/yamad/lua-releases.git
